--- a/index.html
+++ b/index.html
@@ -10,24 +10,25 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="header">
-        <div class="logo">
-            <div class="logo-icon">ОТО</div>
-            <div class="equalizer">
-                <span></span><span></span><span></span>
-            </div>
-        </div>
-        <nav id="navbar">
-            <a href="#about">О нас</a>
-            <a href="#services">Услуги</a>
-            <a href="#team">Команда</a>
-            <a href="#reviews">Отзывы</a>
-            <a href="#contacts">Контакты</a>
-        </nav>
-        <div class="mobile-menu-btn">
+<header class="header">
+    <div class="logo-container">
+        <div class="logo-icon">ОТО</div>
+        <div class="equalizer">
             <span></span><span></span><span></span>
+            <span></span><span></span> <!-- Добавим больше полосок -->
         </div>
-    </header>
+    </div>
+    <nav id="navbar">
+        <a href="#about">О нас</a>
+        <a href="#services">Услуги</a>
+        <a href="#team">Команда</a>
+        <a href="#reviews">Отзывы</a>
+        <a href="#contacts">Контакты</a>
+    </nav>
+    <div class="mobile-menu-btn">
+        <span></span><span></span><span></span>
+    </div>
+</header>
 
     <!-- Hero -->
     <section class="hero" id="parallax">
