--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
     <div class="logo-container">
         <div class="logo-icon">ОТО</div>
         <div class="equalizer">
-            <span></span><span></span><span></span>
-            <span></span><span></span> <!-- Добавим больше полосок -->
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
         </div>
     </div>
     <nav id="navbar">
