--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Header -->
 <header class="header">
-    <div class="logo-container">
+    <div class="logo-wrapper">
         <div class="logo-icon">ОТО</div>
         <div class="equalizer">
             <span class="bar"></span>
@@ -22,6 +22,7 @@
             <span class="bar"></span>
         </div>
     </div>
+    
     <nav id="navbar">
         <a href="#about">О нас</a>
         <a href="#services">Услуги</a>
@@ -29,6 +30,7 @@
         <a href="#reviews">Отзывы</a>
         <a href="#contacts">Контакты</a>
     </nav>
+    
     <div class="mobile-menu-btn">
         <span></span><span></span><span></span>
     </div>
