--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Header -->
 <header class="header">
-    <div class="logo-wrapper">
+    <div class="logo-equalizer-container">
         <div class="logo-icon">ОТО</div>
         <div class="equalizer">
             <span class="bar"></span>
