--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <!-- Hero -->
     <section class="hero" id="parallax">
         <div class="hero-content">
-            <h1 data-aos="fade-down">ОТО МИИГАиК</h1>
-            <p data-aos="fade-down" data-aos-delay="200">Профессиональное световое, звуковое и медиа сопровождение мероприятий</p>
+            <h1 data-aos="fade-down">ОТДЕЛ ТЕХНИЧЕСКОГО ОБЕСПЕЧЕНИЯ МИИГАИК</h1>
+            <p data-aos="fade-down" data-aos-delay="200">ПРОФЕССИОНАЛЬНОЕ СВЕТОВОЕ, ЗВУКОВОЕ И ВИДЕОСОПРОВОЖДЕНИЕ ЛЮБЫХ НЕРОПРИЯТИЙ</p>
             <a href="#contacts" class="cta-button" data-aos="zoom-in">Оставить заявку</a>
         </div>
         <div class="stage-animation">
