--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
+    
 <body>
     <!-- Header -->
 <header class="header">
@@ -35,11 +37,11 @@
 
     <!-- Hero -->
     <section class="hero" id="parallax">
-        <div class="hero-content">
-            <h1 data-aos="fade-down">ОТДЕЛ ТЕХНИЧЕСКОГО ОБЕСПЕЧЕНИЯ МИИГАИК</h1>
-            <p data-aos="fade-down" data-aos-delay="200">ПРОФЕССИОНАЛЬНОЕ СВЕТОВОЕ, ЗВУКОВОЕ И ВИДЕОСОПРОВОЖДЕНИЕ ЛЮБЫХ НЕРОПРИЯТИЙ</p>
-            <a href="#contacts" class="cta-button" data-aos="zoom-in">Оставить заявку</a>
-        </div>
+<div class="hero-content" data-aos="zoom-in" data-aos-delay="200">
+    <h1 data-aos="fade-up">ОТО МИИГАиК</h1>
+    <p data-aos="fade-up" data-aos-delay="100">Профессиональное сопровождение мероприятий</p>
+    <a href="#contacts" class="cta-button" data-aos="fade-up" data-aos-delay="200">Оставить заявку</a>
+</div>
         <div class="stage-animation">
             <div class="spotlight"></div>
             <div class="speaker"></div>
@@ -145,5 +147,13 @@
             once: true
         });
     </script>
+    
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init({
+        duration: 800,
+        once: false
+    });
+</script>
 </body>
 </html>
