--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <!-- Hero -->
     <section class="hero" id="parallax">
 <div class="hero-content" data-aos="zoom-in" data-aos-delay="200">
-    <h1 data-aos="fade-up">ОТО МИИГАиК</h1>
-    <p data-aos="fade-up" data-aos-delay="100">Профессиональное сопровождение мероприятий</p>
+    <h1 data-aos="fade-up">ОТДЕЛ ТЕХНИЧЕСКОГО ОБЕСПЕЧЕНИЯ</h1>
+    <p data-aos="fade-up" data-aos-delay="100">ПРОФЕССИОНАЛЬНОЕ ЗВУКОВОЕ, СВЕТОВОЕ И ВИДЕОСОПРОВОЖДЕНИЕ ПРОЕКТОВ</p>
     <a href="#contacts" class="cta-button" data-aos="fade-up" data-aos-delay="200">Оставить заявку</a>
 </div>
         <div class="stage-animation">
