--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     </section>
 
     <!-- О нас -->
-    <section id="about" class="section">
+    <section id="about" class="section bg-image" style="--bg-url: url('https://images.unsplash.com/photo-1527529482837-4698179dc6ce?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80')">
+  <div class="section-content">
         <h2>О нас</h2>
         <div class="achievements">
             <div class="achievement-card" data-aos="fade-up">
