--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- О нас -->
     <section id="about" class="section bg-image" style="--bg-url: url('https://images.unsplash.com/photo-1540039155733-5bb30b53aa14?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1974&q=80')">
   <div class="section-content">
-        <h2>О нас</h2>
+        <h2>О НАС</h2>
         <div class="achievements">
             <div class="achievement-card" data-aos="fade-up">
                 <h3>50+</h3>
@@ -66,7 +66,7 @@
 
     <!-- Услуги -->
     <section id="services" class="section">
-        <h2>Услуги</h2>
+        <h2>ЧТО МЫ МОЖЕМ ?</h2>
         <div class="services-grid">
             <div class="service-card" data-aos="fade-up">
                 <i class="fas fa-lightbulb"></i>
@@ -87,8 +87,9 @@
     </section>
 
     <!-- Команда -->
-    <section id="team" class="section">
-        <h2>Наша команда</h2>
+  <section id="team" class="section bg-image" style="--bg-url: url('https://images.unsplash.com/photo-1511578314322-379afb476865?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D3D&auto=format&fit=crop&w=2070&q=80')">
+  <div class="section-content">
+        <h2>КОМАНДА</h2>
         <div class="team-grid">
             <div class="team-card" data-aos="fade-up">
                 <div class="photo-placeholder"></div>
@@ -105,7 +106,7 @@
 
     <!-- Отзывы -->
     <section id="reviews" class="section">
-        <h2>Отзывы</h2>
+        <h2>ОТЗЫВЫ</h2>
         <div class="slider">
             <div class="slide active">
                 <p>"Отлично организовали звук на конференции!"</p>
@@ -124,7 +125,7 @@
 
     <!-- Контакты -->
     <section id="contacts" class="section">
-        <h2>Контакты</h2>
+        <h2>КОНТАКТЫ</h2>
         <div class="contact-grid">
             <form class="contact-form" id="feedback-form">
                 <input type="text" name="name" placeholder="Ваше имя" required>
