--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/simple-parallax-js@5.6.2/dist/simpleParallax.min.css">
 </head>
     
 <body>
@@ -155,6 +156,16 @@
     AOS.init({
         duration: 800,
         once: false
+    });
+</script>
+    <script src="https://unpkg.com/simple-parallax-js@5.6.2/dist/simpleParallax.min.js"></script>
+<script>
+    // Инициализация для всех фонов
+    const images = document.querySelectorAll('.bg-image');
+    new simpleParallax(images, {
+        scale: 1.2,
+        delay: 0.6,
+        transition: 'cubic-bezier(0,0,0,1)'
     });
 </script>
 </body>
