--- a/index.html
+++ b/index.html
@@ -91,18 +91,26 @@
   <section id="team" class="section bg-image" style="--bg-url: url('https://images.unsplash.com/photo-1511578314322-379afb476865?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D3D&auto=format&fit=crop&w=2070&q=80')">
   <div class="section-content">
         <h2>КОМАНДА</h2>
-        <div class="team-grid">
-            <div class="team-card" data-aos="fade-up">
-                <div class="photo-placeholder"></div>
-                <h3>Иван Петров</h3>
-                <p>Звукорежиссер</p>
+    <div class="team-grid">
+        <!-- Первый сотрудник -->
+        <div class="team-card">
+            <div class="team-photo">
+                <img src="./images/1.jpg" alt="Андрей Петров - Руководитель">
             </div>
-            <div class="team-card" data-aos="fade-up" data-aos-delay="200">
-                <div class="photo-placeholder"></div>
-                <h3>Анна Смирнова</h3>
-                <p>Светодизайнер</p>
-            </div>
+            <h3>АНДРЕЙ ПЕТРОВ</h3>
+            <p>РУКОВОДИТЕЛЬ</p>
         </div>
+
+        <!-- Второй сотрудник -->
+        <div class="team-card">
+            <div class="team-photo">
+                <img src="./images/2.jpg" alt="Степан Можин - Звукорежиссер">
+            </div>
+            <h3>СТЕПАН МОЖИН</h3>
+            <p>ЗВУКОРЕЖИССЕР</p>
+        </div>
+    </div>
+</section>
     </section>
 
     <!-- Отзывы -->
