--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="team-grid">
         <!-- Первый сотрудник -->
         <div class="team-card">
-            <div class="team-photo">
+              <div class="photo-circle">
                 <img src="./images/1.jpg" alt="Андрей Петров - Руководитель">
             </div>
             <h3>АНДРЕЙ ПЕТРОВ</h3>
@@ -103,7 +103,7 @@
 
         <!-- Второй сотрудник -->
         <div class="team-card">
-            <div class="team-photo">
+              <div class="photo-circle">
                 <img src="./images/2.jpg" alt="Степан Можин - Звукорежиссер">
             </div>
             <h3>СТЕПАН МОЖИН</h3>
