--- a/index.html
+++ b/index.html
@@ -138,45 +138,44 @@
     <!-- Контакты -->
 
 <section id="contacts" class="contacts-section">
-    <div class="contacts-container">
-        <!-- Форма заявки -->
-        <div class="contact-form">
-            <h2>Оставить заявку</h2>
-            <form class="application-form">
-                <div class="form-group">
-                    <input type="text" placeholder="Ваше имя" required>
-                </div>
-                <div class="form-group">
-                    <input type="email" placeholder="Email" required>
-                </div>
-                <div class="form-group">
-                    <input type="tel" placeholder="Телефон">
-                </div>
-                <div class="form-group">
-                    <textarea placeholder="Ваше сообщение" rows="5"></textarea>
-                </div>
-                <button type="submit" class="submit-btn">Отправить заявку</button>
-            </form>
-        </div>
-
-        <!-- Контактная информация -->
-        <div class="contact-info">
-            <h2>Контакты</h2>
-            <div class="info-item">
-                <i class="fas fa-map-marker-alt"></i>
-                <span>Москва, Гороховский пер., 4</span>
+    <!-- Карта на весь экран -->
+    <div id="map" class="fullscreen-map"></div>
+    
+    <!-- Контейнер с формой и контактами поверх карты -->
+    <div class="contacts-overlay">
+        <div class="contacts-container">
+            <!-- Форма -->
+            <div class="contact-form">
+                <h2>Оставить заявку</h2>
+                <form class="application-form">
+                    <div class="form-group">
+                        <input type="text" placeholder="Ваше имя" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="email" placeholder="Email" required>
+                    </div>
+                    <div class="form-group">
+                        <textarea placeholder="Ваше сообщение" rows="5"></textarea>
+                    </div>
+                    <button type="submit" class="submit-btn">Отправить</button>
+                </form>
             </div>
-            <div class="info-item">
-                <i class="fas fa-phone"></i>
-                <span>+7 (495) 123-45-67</span>
-            </div>
-            <div class="info-item">
-                <i class="fas fa-envelope"></i>
-                <span>oto@miigaik.ru</span>
-            </div>
-            <div class="info-item">
-                <i class="fas fa-clock"></i>
-                <span>Пн-Пт: 9:00-18:00</span>
+            
+            <!-- Контактная информация -->
+            <div class="contact-info">
+                <h2>Контакты</h2>
+                <div class="info-item">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <span>Москва, Гороховский пер., 4</span>
+                </div>
+                <div class="info-item">
+                    <i class="fas fa-phone"></i>
+                    <span>+7 (495) 123-45-67</span>
+                </div>
+                <div class="info-item">
+                    <i class="fas fa-envelope"></i>
+                    <span>oto@miigaik.ru</span>
+                </div>
             </div>
         </div>
     </div>
