--- a/index.html
+++ b/index.html
@@ -88,17 +88,17 @@
       <div class="team-grid">
         <div class="team-card">
           <div class="photo-circle">
-            <img src="./images/team1.jpg" alt="Иван Петров - Звукорежиссер">
+            <img src="./images/1.jpg" alt="Андрей Петров - Руководитель">
           </div>
-          <h3>Иван Петров</h3>
-          <p>Звукорежиссер</p>
+          <h3>АНДРЕЙ ПЕТРОВ</h3>
+          <p>РУКОВОДИТЕЛЬ</p>
         </div>
         <div class="team-card">
           <div class="photo-circle">
-            <img src="./images/team2.jpg" alt="Анна Смирнова - Светодизайнер">
+            <img src="./images/2.jpg" alt="Степан Можеин - Звукорежиссер">
           </div>
-          <h3>Анна Смирнова</h3>
-          <p>Светодизайнер</p>
+          <h3>СТЕПАН МОЖИН</h3>
+          <p>ЗВУКОРЕЖИССЕР</p>
         </div>
       </div>
     </div>
