--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     </div>
     
     <nav id="navbar">
-        <a href="#about">О нас</a>
-        <a href="#services">Услуги</a>
-        <a href="#team">Команда</a>
-        <a href="#reviews">Отзывы</a>
-        <a href="#contacts">Контакты</a>
+        <a href="#about">О НАС</a>
+        <a href="#services">УСЛУГИ</a>
+        <a href="#team">КОМАНДА</a>
+        <a href="#reviews">ОТПРАВИТЬ ЗАЯВКУ</a>
+        <a href="#contacts">ГДЕ НАС НАЙТИ</a>
     </nav>
     
 </header>
