--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
-            <span class="bar"></span>
         </div>
     </div>
     
@@ -33,8 +32,7 @@
         <a href="#about">О НАС</a>
         <a href="#services">УСЛУГИ</a>
         <a href="#team">КОМАНДА</a>
-        <a href="#reviews">ОТПРАВИТЬ ЗАЯВКУ</a>
-        <a href="#contacts">ГДЕ НАС НАЙТИ</a>
+        <a href="#contacts">ОПРАВИТЬ ЗАЯВКУ</a>
     </nav>
     
 </header>
