--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a href="#about">О НАС</a>
         <a href="#services">УСЛУГИ</a>
         <a href="#team">КОМАНДА</a>
-        <a href="#contacts">ОПРАВИТЬ ЗАЯВКУ</a>
+        <a href="#contacts">ОТПРАВИТЬ ЗАЯВКУ</a>
     </nav>
     
 </header>
